# rag-experiment

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
data/citys/: 上海市.txt  北京市.txt  南京市.txt  广州市.txt  深圳市.txt
src/: tools.py
src/ch10/4评估检索质量/: retriever_elevator.py  retriever_eval_dataset.json
src/ch10/5评估响应质量/: evaluate_batch.py  evaluate_single.py  generate_dataset.py  myprompts.py  rag_eval_dataset.json
src/ch3/2_debug/: chat.py
src/ch4/: embed.py  llm.ipynb  llm_cust.py  prompt_modify.py  prompt_tmpl.py
src/ch5/: cust_reader.py  doc_define.py  gen_doc.py  gen_node.py  metadata_question.py  metadata_title.py  pipeline.py  pipeline_reload.py  splitter.py
src/ch5/pipeline_storage/: docstore.json  llama_cache
src/ch6/: chroma_easy_vectorstore.py  chroma_vectorstore.py  easy_node.py  simple_embedding.py  simple_vectorstore.py  summary_index.py
src/ch6/storage/: vector_store.json
src/ch7/: cust_response.py  env.example  query_engine.py  query_engine_low_api.py  response.py  retriever.py
src/ch8/: base_route_content.py  base_route_index.py  create_table.SQL  create_table_mysql.SQL  metadata_replace.py  mm.py  multi_selector.py  post_base.py  rerank.py  rewrite_hyde.py  rewrite_hyde_queryengine.py  rewrite_query.py  rewrite_stepcompose.py  route_retriever.py  selector.py  sql.py  sql_queryengine.py  sql_retriever.py  subquestions_engine.py  subquestions_openai.py
src/ch9/2dataAgent工具/: lazy.py  mytool.py  query_plan.py
src/ch9/3直接开发agent/: context_index_agent.py  functioncall_agent.py  openai_agent.py  react_agent.py  (+2 more)
(+9 files in other folders)
