[project]
name = "rag-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.10",
    "dashscope>=1.23.3",
    "jieba>=0.42.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "llama-index",
    "llama-index-embeddings-dashscope>=0.3.0",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.1",
    "llama-index-llms-openai-like>=0.3.5",
    "llama-index-postprocessor-dashscope-rerank>=0.3.0",
    "llama-index-vector-stores-chroma>=0.4.1",
    "ollama>=0.4.8",
    "pip>=25.1.1",
    "psycopg2>=2.9.10",
]
